Exp-2/output/hf-eval-data-v3/f00787_summarize_conversation.err
  File "./f00787_summarize_conversation.py", line 42
    conversation2 = 'A: Hi
                         ^
SyntaxError: EOL while scanning string literal
